--- a/src/components/search.css
+++ b/src/components/search.css
@@ -7,6 +7,8 @@
     padding: 6.5px 0;
     border-radius: 15px;
     margin-bottom: 16px;
+    box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
+
 }
 
 .search img{
