--- a/src/components/search.css
+++ b/src/components/search.css
@@ -8,7 +8,10 @@
     border-radius: 15px;
     margin-bottom: 16px;
     box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.20);
+}
 
+.darkTheme{
+    background-color: #1E2A47;
 }
 
 .search img{
