--- a/src/components/profileCard.css
+++ b/src/components/profileCard.css
@@ -4,8 +4,6 @@
     gap: 20px;
 }
 
-
-
 .profileCard img{
     width: 70px;
     height: 70px;
@@ -14,11 +12,11 @@
 
 .profileInformation h1{
     color: #2B3442;
-    font-family: Space Mono;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+}
+
+.darkTheme h1{
+    color: white;
 }
 
 .profileInformation #login{
@@ -32,21 +30,21 @@
 
 .profileInformation #created_at{
     color: #697C9A;
-    font-family: Space Mono;
     font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+}
+
+.darkTheme #created_at{
+    color: white;
 }
 
 #bio{
     margin-top: 34px;
     margin-bottom: 23px;
     color: #4B6A9B;
-    font-family: Space Mono;
     font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
     line-height: 25px;
-    width: 85%;
+}
+
+.darkTheme #bio{
+    color: #fff;
 }
