--- a/src/components/search.css
+++ b/src/components/search.css
@@ -24,6 +24,7 @@
 .search input{
     border: none;
     width: 56%;
+    font-size: 13px;
 }
 
 .search input::placeholder{
@@ -47,4 +48,21 @@
     font-family: Space Mono;
     font-size: 14px;
     font-weight: 700;
+}
+
+@media screen and (min-width: 768px){
+    .search{
+        margin-bottom: 24px;
+    }
+    .search button{
+        font-size: 16px;
+    }
+
+    .search img{
+        width: 24px;
+        height: 24px;
+    }
+    .search input{
+        font-size: 18px;
+    }
 }
