--- a/src/components/search.css
+++ b/src/components/search.css
@@ -50,6 +50,13 @@
     font-weight: 700;
 }
 
+.error{
+    color: #F74646 !important;
+    font-family: Space Mono;
+    font-size: 15px;
+    font-weight: 700;
+}
+
 @media screen and (min-width: 768px){
     .search{
         margin-bottom: 24px;
