--- a/src/components/search.css
+++ b/src/components/search.css
@@ -27,6 +27,10 @@
     font-size: 13px;
 }
 
+.search input:focus{
+    outline: none;
+}
+
 .search input::placeholder{
     color: #4B6A9B;
     font-size: 13px;
